# HARDInfer

./: .gitignore  HA_latency_summary.json  README.md  architecture.md  main.py  nanovllm_vs_hard_architecture_comparison.md  patch.md  pyproject.toml  visualize_attn.md
docs/: architecture.md
docs/viz/: visualize_attn.md  visualize_guides.md  visualize_task.md  visulize_3d.md
eval/: aime_baseline.py  aime_condense.py  baseline.py  condense.py  layouts_efficiency.py  test.py  utils.py
patches/: flashinfer_v0.5.3.patch
scripts/: no_compress.sh  run_rkv.sh  run_snapkv.sh  run_vanilla_topp.sh  topk_baseline_compress.sh
src/artifacts/nanovllm_HARD/attention/: fa_attention.py  flashinfer_attention.py  flashinfer_attention_headflatten.py
src/artifacts/nanovllm_HARD/block_mngr/: block_manager.py  headwise_block_manager.py  query_block_manger.py
src/artifacts/nanovllm_HARD/cache_mngr/: RKV.py  RKV_revised_topp_rewrite.py  RKV_topp.py  RKV_topp_rewrite.py  headwise.py  layerwise.py  nocompress.py  snapKV.py  snapKV_revised_topp_rewrite.py  snapKV_topp.py  snapKV_topp_rewrite.py  utils.py  vanilla_topp.py  vanilla_topp_rewrite.py
src/artifacts/nanovllm_base/attention/: fa_attention.py  flashinfer_attention.py
src/artifacts/nanovllm_base/block_mngr/: block_manager.py  query_block_manger.py
src/services/nanovllm_HARD/: config.py
src/services/nanovllm_base/: config.py
viz/: latency_sparsity_utilization.py  sparsity_utilization.py  tasks_metrics.py
viz_tools/: npz_to_json.py
viz_tools/viz_attn/: import_node.html  index.html
(+13 files in other folders)
